--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-@font-face {
-	font-family: "Roboto";
-	src: "fonts/Roboto-Regular.ttf"
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
 html body{
-	font-family: "Roboto";
+	font-family: 'Roboto', sans-serif;	
 	height: auto;
 	width: auto;
 	margin: 0;
